%% Power BI import model over pharma_de_processed (Amazon Athena, via ODBC).
%% 4 dimensions + 3 raw facts + 4 pre-aggregated analytics (rpt_*) marts.
%% Every relationship is Many-to-one (fact/rpt = *, dim = 1), single cross-filter
%% direction, joined on text/integer keys. Renders on GitHub; also importable into
%% Lucidchart via File -> Import -> Mermaid.

erDiagram
    dim_company {
        varchar company_name PK
        varchar ticker
        varchar country_iso3
        varchar segment
        boolean is_glp1_player
        boolean is_covid_vaccine_player
        boolean has_financials
    }
    dim_therapy_area {
        varchar therapy_area PK
        varchar therapy_area_label
        varchar therapy_area_group
    }
    dim_region {
        varchar region PK
        varchar income_tier
        boolean is_developed
    }
    dim_year {
        bigint Year PK
    }

    fact_financials {
        varchar company_name FK
        bigint year FK
        double revenue_usd_bn
        double operating_margin_pct
        double operating_income_usd_bn
        double rd_spend_usd_bn
        bigint pipeline_size_est
    }
    fact_biotech_funding {
        bigint deal_id
        bigint year FK
        varchar acquirer_company FK
        varchar target_name
        varchar deal_type
        double value_usd_bn
        boolean is_megadeal
    }
    fact_disease_burden {
        bigint year FK
        varchar region FK
        varchar disease
        varchar mapped_therapy_area
        double dalys_millions
        double global_dalys_millions
    }

    rpt_rnd_efficiency_by_company {
        varchar company_name FK
        varchar segment
        double total_rnd_usd_bn
        bigint approvals_count
        double total_peak_sales_usd_bn
        double peak_sales_per_rnd_usd
    }
    rpt_buy_vs_build {
        varchar company_name FK
        varchar segment
        double total_ma_usd_bn
        bigint ma_deal_count
        double total_rnd_usd_bn
        double ma_to_rnd_ratio
    }
    rpt_therapy_area_success_vs_value {
        varchar therapy_area FK
        bigint trials_count
        double success_rate
        bigint approvals_count
        double avg_peak_sales_usd_bn
    }
    rpt_burden_vs_rnd_mismatch {
        varchar therapy_area FK
        double global_dalys_millions
        bigint approvals_count
        double total_peak_sales_usd_bn
        double dalys_per_approval
    }

    dim_company      ||--o{ fact_financials                   : "company_name"
    dim_company      ||--o{ fact_biotech_funding              : "acquirer"
    dim_company      ||--o{ rpt_rnd_efficiency_by_company     : "company_name"
    dim_company      ||--o{ rpt_buy_vs_build                  : "company_name"
    dim_therapy_area ||--o{ rpt_therapy_area_success_vs_value : "therapy_area"
    dim_therapy_area ||--o{ rpt_burden_vs_rnd_mismatch        : "therapy_area"
    dim_region       ||--o{ fact_disease_burden               : "region"
    dim_year         ||--o{ fact_financials                   : "year"
    dim_year         ||--o{ fact_biotech_funding              : "year"
    dim_year         ||--o{ fact_disease_burden               : "year"
